
  ZOOKEEPER-2079 Stop daemon with "kill" rather than "kill -9" (Guillaume ALAUX
  via michim)

  ZOOKEEPER-1963 Make JDK 7 the minimum requirement for Zookeeper 
  (Hongchao via fpj)

  ZOOKEEPER-2110 Typo fixes in the ZK documentation. (Jeffrey Schroeder via rakeshr)

  ZOOKEEPER-1907 Improve Thread handling (Rakesh R via michim)

Release 3.5.0 - 8/4/2014

NEW FEATURES:
  ZOOKEEPER-1994. Auto-backup configuration files; config version becomes part of filename (Hongchao Deng via shralex)

  ZOOKEEPER-1355. Add zk.updateServerList(newServerList) (Alex Shraer, Marshall McMullen via fpj)

  ZOOKEEPER-1572. Add an async (Java) interface for multi request (Sijie Guo via camille)

  ZOOKEEPER-107. Allow dynamic changes to server cluster membership (Alex Shraer via breed)

  ZOOKEEPER-1400. Allow logging via callback instead of raw FILE pointer
  (Marshall McMullen via michim)

  ZOOKEEPER-1147. Add support for local sessions (Jay Shrauner, thawan via thawan)

  ZOOKEEPER-1691. Add a flag to disable standalone mode (Helen Hastings via michim)

  ZOOKEEPER-442. need a way to remove watches that are no longer of
  interest (Rakesh R, Daniel Gómez Ferro via phunt)

  ZOOKEEPER-1830. Support command line shell for removing watches
  (Rakesh R via michim)

  ZOOKEEPER-1887. C implementation of removeWatches (Raul Gutierrez Segales via
  michim)

  ZOOKEEPER-1928. add configurable throttling to the number of snapshots
  concurrently sent by a leader (Edward Carter via fpj)

  ZOOKEEPER-827. enable r/o mode in C client library (rgs via fpj)

  ZOOKEEPER-1346. Add Jetty HTTP server support for four letter words.
  (Skye Wanderman-Milne, Bill Havanki via phunt)

BUGFIXES:
  ZOOKEEPER-2032. Cleaning up resources in ReconfigBackupTest (Hongchao Deng via shralex)

  ZOOKEEPER-2013. Typos in programmer guide. (Tim Chambers via Alex Shraer)

  ZOOKEEPER-2006. Standalone mode won't take client port from dynamic config. (Hongchao Deng via Alex Shraer)
